--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/webMap.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/webMap.html.twig
@@ -29,6 +29,7 @@
             </li>
         </ul>
         <ul class="web_sections right">
+            <li><a href="{{ url('christiangh_main_cgh_website_portfolio') }}">- {{ 'navigation.portfolio'|trans }}</a></li>
             <li><a href="{{ url('christiangh_main_cgh_website_contents') }}">- {{ 'navigation.contents'|trans }}</a></li>
             <li><a href="{{ url('christiangh_main_cgh_website_contact') }}">- {{ 'navigation.contact'|trans }}</a></li>
         </ul>
