Changed attribute key of Content
Changed attribute key of Content for key_name

--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/Contents/summarizing_quixote.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/Contents/summarizing_quixote.html.twig
@@ -3,7 +3,7 @@
         <div id="main_picture" class="photo">
             <img src="{{ asset('images/clip.png') }}" class="clip_picture" />
             <div class="image_content">
-                <img src="{{ asset('contents/'~content.getKey()~'/images/don-quijote.jpg') }}" class="photo_image" />
+                <img src="{{ asset('contents/'~content.getKeyName()~'/images/don-quijote.jpg') }}" class="photo_image" />
             </div>
         </div>
         <div class="text_in_foil">
