--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
@@ -10,7 +10,7 @@
 {% block css %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/content.css') }}" />
-    <link rel="stylesheet" href="{{ asset('contents/'~content.getKey()~'/css/style.css') }}" />
+    <link rel="stylesheet" href="{{ asset('contents/'~content.getKeyName()~'/css/style.css') }}" />
 {% endblock %}
  
 {% block main %}
@@ -42,7 +42,7 @@
                 3
             {% endif %}
             <div id="content_area">
-                {{ include('ChristianghMainCghWebsiteBundle:Default:Contents/'~content.getKey()~'.html.twig') }}
+                {{ include('ChristianghMainCghWebsiteBundle:Default:Contents/'~content.getKeyName()~'.html.twig') }}
             </div>
             {% if content.getCategory().getClassKey() == 'application_content' %}
                 <div class="tablet_button_border">
@@ -71,5 +71,5 @@
 
 {% block javascripts %}
 {{ parent() }}
-<script src="{{ asset('contents/'~content.getKey()~'/js/javascript.js') }}" type="text/javascript"></script>
+<script src="{{ asset('contents/'~content.getKeyName()~'/js/javascript.js') }}" type="text/javascript"></script>
 {% endblock %}
