--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
@@ -9,6 +9,7 @@
 
 {% block css %}
     {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('js/jquery-highlighter-1.0/css/jquery.highlighter.css') }}" />
     <link rel="stylesheet" href="{{ asset('css/content.css') }}" />
     <link rel="stylesheet" href="{{ asset('contents/'~content.getKeyName()~'/css/style.css') }}" />
 {% endblock %}
@@ -19,7 +20,7 @@
     <section id="content">
         <div id="content_presentation" class="normal_message">
         {% spaceless %}
-            <h1 class="content_title"><span class="content_underlined">{{ content.getName(app.request.locale) }}</span></h1>
+            <h1 class="content_title"><span class="highlight">{{ content.getName(app.request.locale) }}</span></h1>
             <h2 class="content_category">{{ 'content.title.category'|trans }}: {{ content.getCategory.getName(app.request.locale) }}</h2>
             <h2 class="content_collection">{{ 'content.title.collection'|trans }}: {{ content.getCollection.getName(app.request.locale) }}</h2>
             <div class="come_listing">
@@ -71,5 +72,7 @@
 
 {% block javascripts %}
 {{ parent() }}
+<script src="{{ asset('js/jquery-highlighter-1.0/jquery.highlighter.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/content.js') }}" type="text/javascript"></script>
 <script src="{{ asset('contents/'~content.getKeyName()~'/js/javascript.js') }}" type="text/javascript"></script>
 {% endblock %}
