--- a/app/Resources/ChristianghMainCghWebsiteBundle/views/footer.html.twig
+++ b/app/Resources/ChristianghMainCghWebsiteBundle/views/footer.html.twig
@@ -19,37 +19,37 @@
             <li id="social_linkedin">
                 <div class="social_post_it_pegado">&nbsp;</div>
                 <div class="social_post_it">
-                    <a href="https://www.linkedin.com/in/christiangh" target="_blank" title="LinkedIn"><img src="{{ asset('images/social/linkedin.png') }}" alt="Linkedin" title="LinkedIn" /></a>
+                    <a href="https://www.linkedin.com/in/christiangh" target="_blank" title="LinkedIn" rel="nofollow"><img src="{{ asset('images/social/linkedin.png') }}" alt="Linkedin" title="LinkedIn" /></a>
                 </div>
             </li>
             <li id="social_facebook">
                 <div class="social_post_it_pegado"></div>
                 <div class="social_post_it">
-                    <a href="https://www.facebook.com/christianghcom" target="_blank" title="Facebook"><img src="{{ asset('images/social/facebook.png') }}" alt="Facebook" /></a>
+                    <a href="https://www.facebook.com/christianghcom" target="_blank" title="Facebook" rel="nofollow"><img src="{{ asset('images/social/facebook.png') }}" alt="Facebook" /></a>
                 </div>
             </li>
             <li id="social_twitter">
                 <div class="social_post_it_pegado"></div>
                 <div class="social_post_it">
-                    <a href="https://twitter.com/christiangh86" target="_blank" title="Twitter"><img src="{{ asset('images/social/twitter.png') }}" alt="Twitter" /></a>
+                    <a href="https://twitter.com/christiangh86" target="_blank" title="Twitter" rel="nofollow"><img src="{{ asset('images/social/twitter.png') }}" alt="Twitter" /></a>
                 </div>
             </li>
             <li id="social_google">
                 <div class="social_post_it_pegado"></div>
                 <div class="social_post_it">
-                    <a href="https://plus.google.com/+ChristianGarcía86" target="_blank" title="Google+"><img src="{{ asset('images/social/google.png') }}" alt="Google+" /></a>
+                    <a href="https://plus.google.com/+ChristianGarcía86" target="_blank" title="Google+" rel="nofollow"><img src="{{ asset('images/social/google.png') }}" alt="Google+" /></a>
                 </div>
             </li>
             <li id="social_github">
                 <div class="social_post_it_pegado"></div>
                 <div class="social_post_it">
-                    <a href="https://github.com/christiangh" target="_blank" title="GitHub"><img src="{{ asset('images/social/github.png') }}" alt="GitHub" /></a>
+                    <a href="https://github.com/christiangh" target="_blank" title="GitHub" rel="nofollow"><img src="{{ asset('images/social/github.png') }}" alt="GitHub" /></a>
                 </div>
             </li>
             <li id="social_codepen">
                 <div class="social_post_it_pegado"></div>
                 <div class="social_post_it">
-                    <a href="http://codepen.io/christiangh/" target="_blank" title="CodePen"><img src="{{ asset('images/social/codepen.png') }}" alt="CodePen" /></a>
+                    <a href="http://codepen.io/christiangh/" target="_blank" title="CodePen" rel="nofollow"><img src="{{ asset('images/social/codepen.png') }}" alt="CodePen" /></a>
                 </div>
             </li>
             <li id="social_rss">
