Updated content section
Added Package entity

--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/index.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/index.html.twig
@@ -71,7 +71,7 @@
 
 {% block javascripts %}
 {{ parent() }}
-<script src="{{ asset('js/jquery-ui-1.11.2.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/index.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery-ui-1.11.2/jquery-ui-1.11.2.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/jquery-highlighter-1.0/jquery.highlighter.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/index.js') }}" type="text/javascript"></script>
 {% endblock %}
