--- a/web/css/content.css
+++ b/web/css/content.css
@@ -1,6 +1,7 @@
 #content{
     position: relative;
     float: left;
+    width: 100%;
 }
 
 #content_presentation{
@@ -39,7 +40,10 @@
     box-shadow: 3px 4px 6px -3px #000000;
 }
 
-#content_presentation .come_listing .sticker{
+#content_presentation .come_listing::before{
+    position: relative;
+    float: left;
+    content: "";
     width: 100%;
     height: 10px;
     background-color: #00A000;
@@ -68,6 +72,8 @@
     position: relative;
     float: left;
     height: auto;
+    overflow: hidden;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 #content_tags{
@@ -89,11 +95,12 @@
     box-shadow: 3px 4px 6px -3px #000000;
 }
 
-#content_tags li .sticker{
+#content_tags li:before{
     position: relative;
     float: left;
+    content: "";
     width: 10px;
-    height: 30px;
+    height: 100%;
     background-color: #14DCDC;
 }
 
@@ -104,8 +111,12 @@
     padding: 2px 6px;
 }
 
-/** APPLICATION **/
-#content_frame.application_content{
+#content_tags li label:before{
+    content: "#"
+}
+
+/** TABLET **/
+#content_frame.tablet_content{
     border: 1px solid black;
     border-top-left-radius:2em;
     border-top-right-radius:2em;
@@ -115,7 +126,7 @@
     padding: 60px 0 60px;
 }
 
-#content_frame.application_content #content_area{
+#content_frame.tablet_content #content_area{
     width: 96%;
     height: auto;
     min-height: 500px;
@@ -123,7 +134,7 @@
     border: 1px solid black;
 }
 
-#content_frame.application_content .tablet_cam{
+#content_frame.tablet_content .tablet_cam{
     position: absolute;
     left: 46%;
     top: 15px;
@@ -135,7 +146,7 @@
     background-color: #424242;
 }
 
-#content_frame.application_content .tablet_cam_interior{
+#content_frame.tablet_content .tablet_cam_interior{
     position: absolute;
     left: 3px;
     top: 3px;
@@ -147,7 +158,7 @@
     background-color: #424242;
 }
 
-#content_frame.application_content .tablet_sensor_1{
+#content_frame.tablet_content .tablet_sensor_1{
     position: absolute;
     left: 54%;
     top: 17px;
@@ -159,7 +170,7 @@
     background-color: #424242;
 }
 
-#content_frame.application_content .tablet_sensor_2{
+#content_frame.tablet_content .tablet_sensor_2{
     position: absolute;
     left: 58%;
     top: 17px;
@@ -171,7 +182,7 @@
     background-color: #424242;
 }
 
-#content_frame.application_content .tablet_button_border{
+#content_frame.tablet_content .tablet_button_border{
     position: absolute;
     left: 50%;
     margin-left: -17px;
@@ -184,7 +195,7 @@
     background-color: #2E2E2E;
 }
 
-#content_frame.application_content .tablet_button_border .tablet_button{
+#content_frame.tablet_content .tablet_button_border .tablet_button{
     position: absolute;
     left: 2px;
     top: 2px;
@@ -195,7 +206,327 @@
     z-index: 1;
     background-color: #2E2E2E;
 }
-/** APPLICATION **/
+/** TABLET **/
+
+/** RESOURCE **/
+#download_area{
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100px;
+    margin: 0 0 20px;
+}
+
+#download_message{
+    position: relative;
+    float: left;
+    width: calc(100% - 220px);
+}
+
+/** BOX **/
+.box_area{
+    position: absolute;
+    top: 0;
+    right: 4px;
+    width: 150px;
+    height: 100px;
+    -webkit-perspective: 300px; -moz-perspective: 300px; -o-perspective: 300px; perspective: 300px; 
+    perspective-origin: 50% 50%;
+    cursor: pointer;
+}
+
+.box_area .box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
+.box_area .box > figure {
+  display: block;
+  position: absolute;
+  border: 1px solid #A03C0A;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.box_area .box .top_cover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    box-sizing: border-box;
+    -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -o-transform-style: preserve-3d; transform-style: preserve-3d;
+    z-index: 3;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.box_area .box .top_cover figure{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #E68250;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.box_area .box .top_cover .front_cover{
+    background-color: #FF9966;
+}
+.box_area .box .top_cover .back_cover{
+    background-color: #FF9966;
+    transform: rotateY( 180deg );
+}
+
+.box_area .box .bottom_cover{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #FF9966;
+    border: 1px solid #E68250;
+    box-sizing: border-box;
+    -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -o-transform-style: preserve-3d; transform-style: preserve-3d;
+    z-index: 3;
+}
+
+.box_area .box .left_cover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    background-color: #FF9966;
+    border: 1px solid #E68250;
+    box-sizing: border-box;
+    -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -o-transform-style: preserve-3d; transform-style: preserve-3d;
+    z-index: 2;
+}
+
+.box_area .box .right_cover{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100%;
+    background-color: #FF9966;
+    border: 1px solid #E68250;
+    box-sizing: border-box;
+    -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -o-transform-style: preserve-3d; transform-style: preserve-3d;
+    z-index: 2;
+}
+
+.box_area .box .zeal{
+    position: absolute;
+    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background-color: #FFFFFF;
+    opacity: 0.5;
+    z-index: 3;
+}
+
+.box_area .box .top_cover .front_cover .label_in_cover{
+    position: relative;
+    float: left;
+    width: 80%;
+    height: auto;
+    margin: 8px 10% 0;
+    padding: 2px 0;
+    background-color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+    text-decoration: underline;
+    color: #232323;
+    cursor: pointer;
+}
+
+.box_area:hover .box .top_cover .front_cover .label_in_cover{
+    text-decoration: underline;
+    color: #0404B4;
+}
+
+.box_area .box .top_cover .front_cover .label_in_cover::before{
+    position: absolute;
+    top: -5px;
+    left: -4px;
+    width: 100%;
+    height: 10px;
+    content: "";
+    background-color: #FFFFFF;
+    opacity: 0.5;
+    padding: 0 4px;
+}
+
+.box_area .box .top_cover .front_cover .label_in_cover::after{
+    position: absolute;
+    bottom: -5px;
+    left: -4px;
+    width: 100%;
+    height: 10px;
+    content: "";
+    background-color: #FFFFFF;
+    opacity: 0.5;
+    padding: 0 4px;
+}
+
+.box .front,
+.box .back {
+  width: 150px;
+  height: 100px;
+}
+
+.box .right,
+.box .left {
+  width: 50px;
+  height: 100px;
+  left: 50px;
+}
+
+.box .top,
+.box .bottom {
+  width: 150px;
+  height: 50px;
+  top: 25px;
+}
+
+.box .front  {transform: rotateY(   0deg ) translateZ( 25px ); border: 1px solid #FF9966; z-index: 3;}
+.box .back   { transform: rotateX( 180deg ) translateZ( 25px ); background-color: #B4501E; z-index: 1;}
+.box .right  { transform: rotateY(  90deg ) translateZ( 75px ); background: linear-gradient(to right, #DC7846 , #B4501E); z-index: 2;}
+.box .left   { transform: rotateY( -90deg ) translateZ( 75px ); background: linear-gradient(to left, #DC7846 , #B4501E); z-index: 2;}
+.box .top    { transform: rotateX(  90deg ) translateZ( 50px ); background: linear-gradient(to top, #DC7846 , #B4501E); z-index: 2;}
+.box .bottom { transform: rotateX( -90deg ) translateZ( 50px ); background: linear-gradient(to bottom, #DC7846 , #B4501E); z-index: 2;}
+
+.remove_zeal{
+    -webkit-animation: remove_zeal 1000ms linear forwards;
+    -moz-animation: remove_zeal 1000ms linear forwards;
+    animation: remove_zeal 1000ms linear forwards;
+}
+
+@-webkit-keyframes remove_zeal{
+    from {opacity: 0.5;}
+    to {opacity: 0;}
+}
+
+@-moz-keyframes remove_zeal{
+    from {opacity: 0.5;}
+    to {opacity: 0;}
+}
+
+@keyframes remove_zeal{
+    from {opacity: 0.5;}
+    to {opacity: 0;}
+}                   
+
+.open_top_cover{
+    -webkit-animation: open_top_cover 1000ms linear forwards;
+    -moz-animation: open_top_cover 1000ms linear forwards;
+    animation: open_top_cover 1000ms linear forwards;
+}
+
+@-webkit-keyframes open_top_cover{
+    from {transform-origin: 50% top; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% top; transform: perspective(600px) rotateX(220deg);}
+}
+
+@-moz-keyframes open_top_cover{
+    from {transform-origin: 50% top; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% top; transform: perspective(600px) rotateX(220deg);}
+}
+
+@keyframes open_top_cover{
+    from {transform-origin: 50% top; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% top; transform: perspective(600px) rotateX(220deg);}
+}
+
+.open_bottom_cover{
+    -webkit-animation: open_bottom_cover 1000ms linear forwards;
+    -moz-animation: open_bottom_cover 1000ms linear forwards;
+    animation: open_bottom_cover 1000ms linear forwards;
+}
+
+@-webkit-keyframes open_bottom_cover{
+    from {transform-origin: 50% bottom; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% bottom; transform: perspective(600px) rotateX(-220deg);}
+}
+
+@-moz-keyframes open_bottom_cover{
+    from {transform-origin: 50% bottom; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% bottom; transform: perspective(600px) rotateX(-220deg);}
+}
+
+@keyframes open_bottom_cover{
+    from {transform-origin: 50% bottom; transform: perspective(600px) rotateX(0);}
+    to {transform-origin: 50% bottom; transform: perspective(600px) rotateX(-220deg);}
+}
+
+.open_left_cover{
+    -webkit-animation: open_left_cover 1000ms linear forwards;
+    -moz-animation: open_left_cover 1000ms linear forwards;
+    animation: open_left_cover 1000ms linear forwards;
+}
+
+@-webkit-keyframes open_left_cover{
+    from {transform-origin: left 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: left 50%; transform: perspective(600px) rotateY(-220deg);}
+}
+
+@-moz-keyframes open_left_cover{
+    from {transform-origin: left 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: left 50%; transform: perspective(600px) rotateY(-220deg);}
+}
+
+@keyframes open_left_cover{
+    from {transform-origin: left 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: left 50%; transform: perspective(600px) rotateY(-220deg);}
+}
+
+.open_right_cover{
+    -webkit-animation: open_right_cover 1000ms linear forwards;
+    -moz-animation: open_right_cover 1000ms linear forwards;
+    animation: open_right_cover 1000ms linear forwards;
+}
+
+@-webkit-keyframes open_right_cover{
+    from {transform-origin: right 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: right 50%; transform: perspective(600px) rotateY(220deg);}
+}
+
+@-moz-keyframes open_right_cover{
+    from {transform-origin: right 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: right 50%; transform: perspective(600px) rotateY(220deg);}
+}
+
+@keyframes open_right_cover{
+    from {transform-origin: right 50%; transform: perspective(600px) rotateY(0);}
+    to {transform-origin: right 50%; transform: perspective(600px) rotateY(220deg);}
+}
+
+#package{
+    position: absolute;
+    top: calc(50% - 30px);
+    left: calc(50% - 50px);
+    left: 30px;
+    width: 100px;
+    height: 60px;
+    background-color: #E6E6E6;
+    box-shadow: 3px 4px 6px -3px #000000;
+    transform: rotate(-5deg);
+    text-align: center;
+    padding: 4px;
+    box-sizing: border-box;
+    color: #232323;
+    z-index: 2;
+    overflow: hidden;
+}
+/** BOX **/
+/** RESOURCE **/
 
 #content_frame.resource_content{
     border: 2px solid black;
@@ -269,18 +600,42 @@
         padding: 0 10px;
     }
     
-    /** APPLICATION **/
-    #content_frame.application_content .tablet_cam{
+    #download_area{
+        height: 285px;
+    }
+    
+    #download_message{
+        width: 100%;
+    }
+    
+    #link_to_download{
+        position: relative;
+        float: left;
+        width: 100%;
+        margin: 20px 0 0;
+    }
+    
+    .box_area{
+        position: relative;
+        margin: 0 auto;
+    }
+    
+    .box_area .box .top_cover .front_cover .label_in_cover{
+        z-index: 5;
+    }
+    
+    /** TABLET **/
+    #content_frame.tablet_content .tablet_cam{
         left: 10%;
     }
     
-    #content_frame.application_content .tablet_sensor_1{
+    #content_frame.tablet_content .tablet_sensor_1{
         left: 25%;
     }
     
-    #content_frame.application_content .tablet_sensor_2{
+    #content_frame.tablet_content .tablet_sensor_2{
         left: 35%;
     }
-    /** APPLICATION **/
+    /** TABLET **/
 }
 /** PHONE **/
