--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/content.html.twig
@@ -10,8 +10,12 @@
 {% block css %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('js/jquery-highlighter-1.0/css/jquery.highlighter.css') }}" />
+    {% for package in content.getPackagesByType("css") %}
+    <link rel="stylesheet" href="{{ asset( package.getUrl() ) }}" />
+    {% endfor %}
     <link rel="stylesheet" href="{{ asset('css/content.css') }}" />
     <link rel="stylesheet" href="{{ asset('contents/'~content.getKeyName()~'/css/style.css') }}" />
+    <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css' />
 {% endblock %}
  
 {% block main %}
@@ -24,44 +28,71 @@
             <h2 class="content_category">{{ 'content.title.category'|trans }}: {{ content.getCategory.getName(app.request.locale) }}</h2>
             <h2 class="content_collection">{{ 'content.title.collection'|trans }}: {{ content.getCollection.getName(app.request.locale) }}</h2>
             <div class="come_listing">
-                <div class="sticker"></div>
                 <a href="{{ url('christiangh_main_cgh_website_contents') }}" title="{{ 'content.listing.title'|trans }}"><label>{{ 'content.listing.label'|trans }}</label></a>
             </div>
         {% endspaceless %}
         </div>
         
-        <div id="content_frame" class="{{ content.getCategory().getClassKey() }}">
-            {% if content.getCategory().getClassKey() == 'application_content' %}
-                <div class="tablet_cam">
-                    <div class="tablet_cam_interior"></div>
-                </div>
-                <div class="tablet_sensor_1"></div>
-                <div class="tablet_sensor_2"></div>
-            {% elseif content.getCategory().getClassKey() == 'resource_content' %}
-                2
-            {% else %}
-                3
-            {% endif %}
+        <div id="content_frame" class="tablet_content">
+            <div class="tablet_cam">
+                <div class="tablet_cam_interior"></div>
+            </div>
+            <div class="tablet_sensor_1"></div>
+            <div class="tablet_sensor_2"></div>
+            
             <div id="content_area">
                 {{ include('ChristianghMainCghWebsiteBundle:Default:Contents/'~content.getKeyName()~'.html.twig') }}
             </div>
-            {% if content.getCategory().getClassKey() == 'application_content' %}
-                <div class="tablet_button_border">
-                    <div class="tablet_button">
-                    </div>
+            
+            <div class="tablet_button_border">
+                <div class="tablet_button">
                 </div>
-            {% elseif content.getCategory().getClassKey() == 'resource_content' %}
-                2
-            {% else %}
-                3
-            {% endif %}
+            </div>
         </div>
         
+        {% if content.getCategory().getClassKey() == 'resource_content' %}
+            <div id="download_area">
+                <div id="download_message" class="normal_message">
+                    <p>{{ 'content.download.message'|trans({ '%contentName%': content.getName(app.request.locale) }) }}</p>
+                </div>
+                <a id="link_to_download" href="{{ app.request.getBaseURL() }}/contents/{{ content.getKeyName() }}/download/{{ content.getDownload() }}">
+                    <div class="box_area">
+                        <div class="box">
+                            <figure class="front">
+                                <div class="top_cover">
+                                    <figure class="front_cover"><label class="label_in_cover">{{ 'content.download.label_in_cover'|trans }}</label></figure>
+                                    <figure class="back_cover"></figure>
+                                </div>
+                                <div class="bottom_cover">
+                                    <figure class="front_cover"></figure>
+                                    <figure class="back_cover"></figure>
+                                </div>
+                                <div class="left_cover">
+                                    <figure class="front_cover"></figure>
+                                    <figure class="back_cover"></figure>
+                                </div>
+                                <div class="right_cover">
+                                    <figure class="front_cover"></figure>
+                                    <figure class="back_cover"></figure>
+                                </div>
+                                <div class="zeal"></div>
+                            </figure>
+                            <figure class="back"></figure>
+                            <figure class="right"></figure>
+                            <figure class="left"></figure>
+                            <figure class="top"></figure>
+                            <figure class="bottom"></figure>
+                            <div id="package">{{ content.getName(app.request.locale) }}</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        {% endif %}
+        
         <ul id="content_tags">
-        {% for tag in content.getTagsArray() %}
+        {% for tag in content.getTagsArray(app.request.locale) %}
             <li>
-                <div class="sticker"></div>
-                <label>#{{ tag }}</label>
+                <label>{{ tag }}</label>
             </li>
         {% endfor %}
         </ul>
@@ -73,6 +104,9 @@
 {% block javascripts %}
 {{ parent() }}
 <script src="{{ asset('js/jquery-highlighter-1.0/jquery.highlighter.min.js') }}" type="text/javascript"></script>
+{% for package in content.getPackagesByType("js") %}
+<script src="{{ asset( package.getUrl() ) }}" type="text/javascript"></script>
+{% endfor %}
 <script src="{{ asset('js/content.js') }}" type="text/javascript"></script>
 <script src="{{ asset('contents/'~content.getKeyName()~'/js/javascript.js') }}" type="text/javascript"></script>
 {% endblock %}
