Added jQuery Highlighter
Added jQuery Highlighter and updated summarizing the Quixote

--- a/web/js/jquery-highlighter-1.0/demo/css/style.css
+++ b/web/js/jquery-highlighter-1.0/demo/css/style.css
@@ -14,7 +14,7 @@ main{
     width: 100%;
     height: auto;
     min-height: 100vh;
-    background-color: #C2B280;
+    background-color: #CEF6CE;
     font-family: MV Boli,sans-serif;
 	font-size: 16px;
     box-sizing: border-box;
