--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/Contents/music-mixer-table.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/Contents/music-mixer-table.html.twig
@@ -1,3 +1,12 @@
+{% extends 'ChristianghMainCghWebsiteBundle:Default:content.html.twig' %}
+
+{% block css %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('js/jquery-ui-1.11.2/jquery-ui.css') }}" />
+    <link rel="stylesheet" href="{{ asset('contents/music-mixer-table/css/style.css') }}" />
+{% endblock %}
+
+{% block content %}
 <div id="incorrect_resolution">
     {{ 'error.incorrect_screen_size.message'|trans }}    
 </div>
@@ -84,3 +93,10 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+<script src="{{ asset('js/jquery-ui-1.11.2/jquery-ui.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('contents/music-mixer-table/js/javascript.js') }}" type="text/javascript"></script>
+{% endblock %}
