--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -49,6 +49,7 @@
     background-color: white;
     border: none;
     z-index: 3;
+    font-family: MV Boli,sans-serif;
 }
 
 #user_info{
@@ -85,6 +86,7 @@
     border: none;
     border-bottom: 1px solid #000000;
     padding: 6px 3px;
+    font-family: MV Boli,sans-serif;
 }
 
 #user_info .send_email{
@@ -98,7 +100,7 @@
     width: 450px;
     top: 0;
     right: 0;    
-    z-index: 1;
+    z-index: -1;
     /*box-shadow: 3px 4px 6px -3px #000000;*/    
     -webkit-transform: rotate(30deg);
     -moz-transform: rotate(30deg);
